--- a/Memes_front/index.html
+++ b/Memes_front/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Game Of Memes Search</title>
     <link rel="stylesheet" href="index.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/search.js"></script>
 </head>
