--- a/Memes_front/index.html
+++ b/Memes_front/index.html
@@ -12,7 +12,7 @@
     <div id="search_content">
         <img src="game-of-thrones.svg" id="logo">
         <br>
-        <input type="search" id="search" placeholder="Find a GoT Meme!" onkeydown="onKeyDownSearch(event)">
+        <input type="search" id="search" placeholder="Find a GoT Meme!" onkeydown="search()">
         <input type="button" id="search_button" value="Search" onclick="search()">
     </div>
     <div id="memes">
