--- a/Memes_front/index.html
+++ b/Memes_front/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="search_content">
-        <img src="game-of-thrones.svg" id="logo">
+        <img src="Logo.png" id="logo">
         <br>
         <input type="search" id="search" placeholder="Find a GoT Meme!" onkeydown="search()">
         <input type="button" id="search_button" value="Search" onclick="search()">
