--- a/Memes_front/index.html
+++ b/Memes_front/index.html
@@ -9,6 +9,7 @@
     <script src="js/search.js"></script>
 </head>
 <body>
+    <div id="content">
     <div id="search_content">
         <img src="Logo.png" id="logo">
         <br>
@@ -16,9 +17,9 @@
         <input type="button" id="search_button" value="Search" onclick="search()">
     </div>
     <div id="memes">
-        <span class="helper"></span>
         <div id="display"></div>
         <div id="memes_small"></div>
+    </div>
     </div>
 </body>
 </html>
